# bestbeta

./: README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
bestbeta/: __init__.py  solver.py
scripts/: find_beta.py  run_tests.py
tests/: __init__.py  conftest.py  test_hypothesis.py  test_solver.py
