[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bestbeta"
version = "0.1.0b1"
authors = [
  { name="Vasily Artyukhov", email="darth.vasya@gmail.com" },
]
description = "A package to find beta distributions matching confidence intervals."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "scipy>=1.7.0",
    "numpy>=1.20.0",
    "betaincder @ git+https://git@github.com/dvasya/betaincder.git@build-cleanup",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "hypothesis>=6.0",
]
ui = [
    "streamlit>=1.29.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
]
all = [
    "pytest>=6.0",
    "hypothesis>=6.0",
    "streamlit>=1.29.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/dvasya/bestbeta"
"Repository" = "https://github.com/dvasya/bestbeta"
"Documentation" = "https://github.com/dvasya/bestbeta#readme"
"Issues" = "https://github.com/dvasya/bestbeta/issues"